Fix overflow-x

--- a/styles/global.css
+++ b/styles/global.css
@@ -65,6 +65,7 @@ body {
   font-weight: var(--fontLight, 300);
   color: var(--default, #212121);
   background-color: var(--yellow, #f5e7ad);
+  overflow-x: hidden;
 }
 
 h1,
